Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70672

When ANGLE is used and video playback is switched very quickly then it can cause a crash.

XMLWordPrintable

    • Windows

      When ANGLE is used and video playback is switched very quickly then it can cause a crash. If there is enough time between the stopping and the playback of the next video then it is fine. It is also only happening with ANGLE.

        1. main.qml
          0.6 kB
          Andy Shaw
        For Gerrit Dashboard: QTBUG-70672
        # Subject Branch Project Status CR V

            valentyn.doroshchuk Valentyn Doroshchuk
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes